RESOLVED FIXED61245
When removing a shadow root from DOM, also remove it from the render tree
https://bugs.webkit.org/show_bug.cgi?id=61245
Summary When removing a shadow root from DOM, also remove it from the render tree
Dominic Cooney
Reported 2011-05-22 02:32:01 PDT
I have diagnosed the cause of the crashes discussed in bug 59571 as a shadow root remaining in the render tree after it is removed from the DOM. When a shadow root is removed from the DOM, it should also be removed from the render tree.
Attachments
Patch (2.57 KB, patch)
2011-05-22 02:40 PDT, Dominic Cooney
no flags
Dominic Cooney
Comment 1 2011-05-22 02:40:49 PDT
Dimitri Glazkov (Google)
Comment 2 2011-05-22 07:51:04 PDT
Comment on attachment 94338 [details] Patch OMG. Good find.
WebKit Commit Bot
Comment 3 2011-05-22 08:56:16 PDT
Comment on attachment 94338 [details] Patch Clearing flags on attachment: 94338 Committed r87029: <http://trac.webkit.org/changeset/87029>
WebKit Commit Bot
Comment 4 2011-05-22 08:56:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.