2011-05-22  Dominic Cooney  <dominicc@chromium.org>

Reviewed by Dimitri Glazkov.

        When removing a shadow root, also remove it from the render tree.
        https://bugs.webkit.org/show_bug.cgi?id=61245

        * platform/mac/Skipped: Unskip shadow tests.
2011-05-22  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        When removing a shadow root, also remove it from the render tree.
        https://bugs.webkit.org/show_bug.cgi?id=61245

        Test: existing fast/dom/shadow/layout-tests-can-access-shadow.html

        * dom/Element.cpp:
        (WebCore::Element::removeShadowRoot): Call detach if attached.

Canonical link: https://commits.webkit.org/76628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87029 268f45cc-cd09-0410-ab3c-d52691b4dbfc